fix overflow

--- a/VolunteerManager/main/static/css/edit.css
+++ b/VolunteerManager/main/static/css/edit.css
@@ -33,3 +33,8 @@ body
     padding-top: 10px;
     padding-bottom: 11px;
 }
+
+.mdl-card,.mdl-card__supporting-text
+{
+    overflow: visible !important;
+}
